# Price_Alchemy

./: .coverage.Mehuls-MacBook-Pro.local.11924.XdaqQBMx  .coverage.Mehuls-MacBook-Pro.local.8807.XKjFXYHx  .gitignore  Dockerfile  README.md  app.py  created_table.sql  docker-compose.yaml  preprocessed_data.pickle  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docker.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
Testing folder/TFDV test/: TFDV_Lab1.ipynb
dags/: data-migration.py  data_pipeline_dag.py  hello_world.py  ml-model-pipeline.py  retraining_dag.py  training_dag.py
dags/price_alchemy/: config.py  cred.py  data_loading.py  data_preprocessing.py  hpo.py  logging_setup.py  model_dispatcher.py  train.py
dags/price_alchemy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: 1_basic-exploration.ipynb  EDA_v1.ipynb  HPO.ipynb  coludSQl_connection.ipynb  data_preparation.ipynb  data_preprocessing.ipynb  data_validation_v1.ipynb  data_validation_v2.ipynb  end_to_end.ipynb  holdout_lisitng_ddl.sql  mlflow.ipynb  modelling_v1.ipynb  modelling_v2.ipynb  modelling_v3.ipynb  product_listing_ddl.sql  save_to_csv.ipynb  test.ipynb  text_preprocessing.ipynb  word_embeddings.ipynb
src/: data_validation.py
src/price_alchemy/: __init__.py  config.py  data_loading.py  data_preprocessing.py  data_validation.py
src/price_alchemy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_data_prep.py  test_data_val.py  test_train.py
