[metadata]
name = price_alchemy
description = MLOps project setup configuration file
author = Mehul Jain et al
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    price_alchemy
install_requires =
    pandas>=2
    nltk
    spacy
    scikit-learn
    sqlalchemy
    mysql-connector-python>8
    google-cloud-storage
    great-expectations
    pandera
python_requires = >=3.9
package_dir =
    =dags
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
price_alchemy = py.typed

[flake8]
max-line-length = 160